--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>主人科技</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link href="../fonts/fonts.css" rel="stylesheet">
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="ZRenTechLOGO.ico" />
   <body bgcolor="#121314">
   <style>
     body {
@@ -68,7 +68,7 @@
   </style>
 </head>
 <body>
-  <h1><a href="https://域名或IP地址:端口号/" target="_top" class="main">主人</a></h1>
+  <h1><a href="./main/index.html" target="_top" class="main">主人</a></h1>
   <p style="font-weight:500; font-size:2.2em">
     Welcome Back!
   </p>
