--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 -->
 
   <p>
-    欢迎使用<a href="#" target="_top" class="main">主人科技</a>
+    欢迎使用<a href="./main/index.html" target="_top" class="main">主人科技</a>
 <br>
     已经在学习各种技术用于插件类软件的开发
 <br>
