--- a/main/index.html
+++ b/main/index.html
@@ -40,7 +40,7 @@
   </style>
   </head>
   <body>
-    <h1 class="title"><a href="../index.html" style="color:#FFFFFF;" >ZRen Tech</a></h1>
+    <h1  class="title"><a href="../index.html" style="color:#FFFFFF;" >ZRen</a> <a href="../index.html" style="color:#FFFFFF;" >Tech</a></h1>
     <h2 class="subtitle"><a href="../index.html" style="color:#FFFFFF;" >S T U D I O S</a></h2>
   </body>
 </html>
