--- a/main/index.html
+++ b/main/index.html
@@ -1,49 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>主人Ciallo～(∠・ω< )⌒★</title>
     <link rel="shortcut icon" href="../ZRenTechLOGO.ico" />
     <style>
-	a{
-	text-decoration:none;
-      }
-      @font-face {
-          font-family: 'FS';
-          src: url('fonts/MOJANGSTUDIOSFONTBYBAPAKUY-REGULAR.OTF') format('truetype');
-      }
-      @font-face {
-          font-family: 'SegoeUI';
-          src: url('fonts/SEGUIBL.TTF') format('truetype');
-      }
-      body {
-          background-color: #303030;
-          margin: 0;
-          height: 100vh;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          color: white;
-          font-family: 'Arial', sans-serif;
-      }
-      .title {
-          font-family: 'FS', sans-serif;
-          font-size: 8em;
-          margin: 0;
-      }
-      .subtitle {
-          font-family: 'SegoeUI', sans-serif;
-          font-size: 4em;
-          margin: 0;
-      }
-  </style>
-  </head>
-  <body>
-    <h1  class="title"><a href="../index.html" style="color:#FFFFFF;" >ZRen</a> <a href="../index.html" style="color:#FFFFFF;" >Tech</a></h1>
-    <h2 class="subtitle"><a href="../index.html" style="color:#FFFFFF;" >S T U D I O S</a></h2>
-  </body>
+        a {
+            text-decoration: none;
+        }
+        @font-face {
+            font-family: 'FS';
+            src: url('fonts/MOJANGSTUDIOSFONTBYBAPAKUY-REGULAR.OTF') format('truetype');
+        }
+        @font-face {
+            font-family: 'SegoeUI';
+            src: url('fonts/SEGUIBL.TTF') format('truetype');
+        }
+        body {
+            background-color: #303030;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
+        .title {
+            font-family: 'FS', sans-serif;
+            font-size: 8em;
+            margin: 0;
+            text-align: center;
+        }
+        .subtitle {
+            font-family: 'SegoeUI', sans-serif;
+            font-size: 4em;
+            margin: 0;
+            text-align: center;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 1200px) {
+            .title {
+                font-size: 6em;
+            }
+            .subtitle {
+                font-size: 3em;
+            }
+        }
+        @media (max-width: 768px) {
+            .title {
+                font-size: 4em;
+            }
+            .subtitle {
+                font-size: 2em;
+            }
+        }
+        @media (max-width: 480px) {
+            .title {
+                font-size: 2em;
+            }
+            .subtitle {
+                font-size: 1em;
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1 class="title"><a href="../index.html" style="color:#FFFFFF;">ZRen Tech</a></h1>
+    <h2 class="subtitle"><a href="../index.html" style="color:#FFFFFF;">S T U D I O S</a></h2>
+    <div style="position: absolute; bottom: 10px; width: 100%; text-align: center;">
+        <a href="https://www.zren.top" style="color: white; font-size: 0.8em; text-decoration: none;">© www.zren.top</a>
+    </div>
+</body>
 </html>
-    <!-- ######################### -->
-    <!-- 没事看nm的代码呢-->
-    <!-- ######################### -->
