--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <h1 class="title"><a href="./main/index.html" style="color:#FFFFFF;">ZRen Tech</a></h1>
     <h2 class="subtitle"><a href="./main/index.html" style="color:#FFFFFF;">S T U D I O S</a></h2>
     <dev style="position: absolute; bottom: 5%; width: 100%; text-align: center; ">
-        <a href="https://www.zren.top" style="color: white; font-size: 1.5em; text-decoration: none;">前往介绍页</a>
+        <a href="./main/index.html" style="color: white; font-size: 1.5em; text-decoration: none;">前往介绍页</a>
     </dev>
     <zdb style="position: absolute; bottom: 2%; width: 100%; text-align: center;">
         <a href="https://www.zren.top" style="color: white; font-size: 0.8em; text-decoration: none;">© www.zren.top</a>
